--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -8,8 +8,12 @@
 }
 
 @font-face {
-    font-family: robotoSlabNormal;
+    font-family: robotoSlabThin;
     src: url(../css/fonts/robotoSlab/RobotoSlab-Light.ttf);
+}
+@font-face {
+    font-family: robotoSlabNormal;
+    src: url(../css/fonts/robotoSlab/RobotoSlab-Regular.ttf);
 }
 
 
