--- a/css/styles.css
+++ b/css/styles.css
@@ -48,10 +48,76 @@
   padding: 20px;
 }
 .threeBoxes .box {
-  height: 600px;
-  width: 25%;
+  height: 620px;
+  width: calc(300px + 1vw);
   min-width: 300px;
-  background-color: green;
+  border: black 2px solid;
+  border-radius: 10px;
+}
+.threeBoxes .box h3 {
+  font-size: 45px;
+  margin-top: 20px;
+  color: black;
+  font-family: robotoSlabNormal;
+}
+.threeBoxes .box .event {
+  font-size: 20px;
+  display: flex;
+  text-align: center;
+}
+.threeBoxes .box .event a {
+  color: #4db1ea;
+}
+.threeBoxes .box .event p {
+  padding: 10px;
+}
+.threeBoxes .box .event span {
+  text-decoration: underline;
+  margin-top: 15px;
+}
+.threeBoxes .box .eventsBox {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.threeBoxes .box .eventsBox .eventsButton {
+  margin-top: 20px;
+}
+.threeBoxes .box .eventsBox .eventsButton a {
+  text-decoration: none;
+  font-size: 25px;
+  font-family: poppinsReg;
+}
+.threeBoxes .box .eventsBox .eventsButton a span {
+  padding: 20px;
+  background-color: #0069a5;
+  border-radius: 50px;
+}
+.threeBoxes .box .socialsBox {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  max-height: 400px;
+}
+.threeBoxes .box .socialsBox .socialButtons {
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
+.threeBoxes .box .socialsBox .socialButtons .socialButton {
+  background-color: #0069a5;
+  margin-top: 20px;
+  border-radius: 50px;
+  padding: 10px;
+}
+.threeBoxes .box .socialsBox .socialButtons .socialButton a {
+  font-size: 30px;
+  text-decoration: none;
+  padding: 10px;
 }
 
 .ourMission {
@@ -102,8 +168,12 @@
   src: url(../css/fonts/robotoSlab/RobotoSlab-ExtraLight.ttf);
 }
 @font-face {
-  font-family: robotoSlabNormal;
+  font-family: robotoSlabThin;
   src: url(../css/fonts/robotoSlab/RobotoSlab-Light.ttf);
+}
+@font-face {
+  font-family: robotoSlabNormal;
+  src: url(../css/fonts/robotoSlab/RobotoSlab-Regular.ttf);
 }
 @font-face {
   font-family: poppinsReg;
@@ -205,7 +275,7 @@ a {
   justify-content: space-evenly;
 }
 .footer footer {
-  width: 90%;
+  width: 95%;
   display: flex;
   align-items: center;
   justify-content: space-between;
