Home Page Nearly Done (Work Day 1.75)

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@
   padding: 20px;
 }
 .threeBoxes .box {
-  height: 620px;
+  height: 450px;
   width: calc(300px + 1vw);
   min-width: 300px;
   border: black 2px solid;
@@ -90,9 +90,10 @@
   font-family: poppinsReg;
 }
 .threeBoxes .box .eventsBox .eventsButton a span {
-  padding: 20px;
   background-color: #0069a5;
+  margin-top: 20px;
   border-radius: 50px;
+  padding: 12px;
 }
 .threeBoxes .box .socialsBox {
   display: flex;
@@ -114,10 +115,35 @@
   border-radius: 50px;
   padding: 10px;
 }
-.threeBoxes .box .socialsBox .socialButtons .socialButton a {
+.threeBoxes .box .socialsBox .socialButtons .socialButton span {
   font-size: 30px;
-  text-decoration: none;
   padding: 10px;
+}
+.threeBoxes .box .socialsBox .socialButtons .socialButton a {
+  text-decoration: none;
+}
+.threeBoxes .box .quickLinks {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.threeBoxes .box .quickLinks .link {
+  font-size: 20px;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  padding: 10px;
+}
+.threeBoxes .box .quickLinks .link a {
+  color: #4db1ea;
+}
+.threeBoxes .box .quickLinks .link p {
+  padding: 10px;
+}
+.threeBoxes .box .quickLinks .link span {
+  text-decoration: underline;
+  margin-top: 15px;
 }
 
 .ourMission {
@@ -140,6 +166,7 @@
 .ourMission .missionStatement li {
   margin-bottom: 20px;
   font-family: poppinsReg;
+  margin-left: 20px;
 }
 .ourMission .logo {
   background-image: url(../css/rabbitAssets/icons/newLogo.png);
@@ -157,6 +184,9 @@
   .threeBoxes .box {
     margin-bottom: 25px;
     width: 400px;
+  }
+  .ourMission .logo {
+    width: 300px;
   }
 }
 @font-face {
@@ -219,51 +249,59 @@ nav .homeButton img {
   margin-left: 10px;
 }
 nav .links {
-  width: 75%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+  margin-right: 50px;
 }
-nav .links a {
+nav .links .parent {
+  display: block;
+  position: relative;
+  float: left;
+  line-height: 50px;
+  background-color: #4db1ea;
+}
+nav .links .parent a {
+  margin: 10px;
+  color: #ffffff;
   text-decoration: none;
-  font-size: 20px;
 }
-nav .links a :hover {
-  background-color: #0069a5;
+nav .links .parent:hover > ul {
+  display: block;
+  position: absolute;
 }
-nav .links i {
-  margin-left: 10px;
-}
-nav .links .link {
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: column;
-}
-nav .links .adoption {
-  width: 200px;
-  margin-top: 110px;
-}
-nav .links .rabbit {
-  width: 200px;
-  margin-top: 280px;
-}
-nav .links .directLink {
-  margin-top: 10px;
-  padding: 10px;
-}
-nav .subMenu {
-  background-color: #0069a5;
-  padding: 5px;
-  margin-top: -16px;
+nav .links .child {
   display: none;
 }
-nav .subMenu li {
-  list-style-type: none;
-  margin-top: 5px;
-}
-
-a {
+nav .links .child li {
+  background-color: #4db1ea;
+  line-height: 40px;
   color: white;
+  width: 200px;
+}
+nav .links .child li a {
+  color: white;
+  width: 100%;
+  align-items: center;
+}
+nav .links ul {
+  list-style: none;
+  margin: 0;
+  padding: 0px;
+  min-width: 8.65em;
+}
+nav .links ul ul ul {
+  left: 100%;
+  top: 0;
+  margin-left: 1px;
+}
+nav .links li:hover {
+  background-color: #0069a5;
+}
+nav .links .parent li:hover {
+  background-color: #0069a5;
+}
+nav .links .expand {
+  font-size: 12px;
+  float: right;
+  margin-right: 5px;
 }
 
 .footer {
@@ -298,6 +336,12 @@ a {
 }
 .footer .socialLinks a i {
   font-size: 60px;
+}
+
+@media (max-width: 1000px) {
+  footer {
+    font-size: smaller;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
