--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,6 @@
 @import "home.scss";
 @import "fonts.scss";
 
-
 //Variables//
 $siteBlue: #4db1ea;
 $siteDarkBlue: #0069a5;
@@ -28,7 +27,6 @@ p {
   margin-bottom: 16px;
 }
 
-
 //Nav Styling//
 nav {
   background-color: $siteBlue;
@@ -47,75 +45,94 @@ nav {
       margin-left: 10px;
     }
   }
+
   .links {
-    width: 75%;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    // background-color: red;
-    a {
-      text-decoration: none;
-      font-size: 20px;
-      :hover {
-        background-color: $siteDarkBlue;
-      }
-    }
-    i {
-      margin-left: 10px;
+    margin-right: 50px;
+    .parent {
+      display: block;
+      position: relative;
+      float: left;
+      line-height: 50px;
+      background-color: $siteBlue;
+      // border-right: #CCC 1px solid;
+      // width:9%;
     }
 
-    .link {
-      display: flex;
-      //   align-items: center;
-      justify-content: space-evenly;
-      flex-direction: column;
-      //   background-color: red;
-      
+    .parent a {
+      margin: 10px;
+      color: #ffffff;
+      text-decoration: none;
     }
-    .adoption{
-        width: 200px;
-      margin-top: 110px;
+
+    .parent:hover > ul {
+      display: block;
+      position: absolute;
     }
-    .rabbit{
-        width: 200px;
-      margin-top: 280px;
+
+    .child {
+      display: none;
     }
-    .directLink{
-        margin-top: 10px;
-        padding: 10px;
+
+    .child li {
+      background-color: $siteBlue;
+      line-height: 40px;
+      color: white;
+      width: 200px;
     }
-  }
-  .subMenu {
-    background-color: $siteDarkBlue;
-    padding: 5px;
-    margin-top: -16px;
-    display: none;
-    li {
-      list-style-type: none;
-      margin-top: 5px;
+
+    .child li a {
+      color: white;
+      width: 100%;
+      align-items: center;
+    }
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0px;
+      min-width: 8.65em;
+    }
+
+    ul ul ul {
+      left: 100%;
+      top: 0;
+      margin-left: 1px;
+    }
+
+    li:hover {
+      background-color: $siteDarkBlue;
+    }
+
+    .parent li:hover {
+      background-color: $siteDarkBlue;
+    }
+
+    .expand {
+      font-size: 12px;
+      float: right;
+      margin-right: 5px;
     }
   }
 }
-a {
-  color: white;
-}
+
+//definitly not stolen nav styling//
 
 //Footer Styling
-.footer{
-  footer{
+.footer {
+  footer {
     width: 95%;
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
   height: 75px;
-  background-color:$siteBlue;
+  background-color: $siteBlue;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  
-  .title{
+
+  .title {
     font-size: 25px;
     width: 200px;
     margin-top: 10px;
@@ -123,19 +140,27 @@ a {
     font-family: robotoSlab;
     margin-left: 20px;
   }
-  .copyright{
+  .copyright {
     font-family: robotoSlabNormal;
     margin-top: 50px;
     color: white;
   }
 
-  .socialLinks{
-    
-    a{
+  .socialLinks {
+    a {
       margin: 10px;
-      i{
+      i {
         font-size: 60px;
       }
     }
+  }
+}
+
+//Media Queries//
+@media (max-width: 1000px) {
+  footer {
+    font-size: smaller;
+  }
+  .socialLinks {
   }
 }
