--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -16,8 +16,13 @@
     src: url(../css/fonts/robotoSlab/RobotoSlab-Regular.ttf);
 }
 
+@font-face {
+    font-family: robotoSlabBold;
+    src: url(../css/fonts/robotoSlab/RobotoSlab-ExtraBold.ttf);
+}
 
 @font-face {
     font-family: poppinsReg;
     src: url(../css/fonts/poppins/Poppins-Regular.ttf);
 }
+
