--- a/scss/adoption.scss
+++ b/scss/adoption.scss
@@ -92,6 +92,10 @@
   width: 70%;
   margin: 0 auto;
 
+  .special{
+    color: $siteDarkBlue;
+  }
+
   h1 {
     font-family: robotoSlab;
     font-size: 60px;
@@ -117,6 +121,8 @@
       width: 250px;
       height: 250px;
       border-radius: 25px;
+      object-fit: cover;
+
       // border-radius: 50%;
     }
     p {
@@ -130,9 +136,13 @@
         margin-right: 10px;
         color: $siteDarkBlue;
       }
+      .info {
+        margin-top: 20px;
+        margin-left: 10px;
+      }
     }
     .bio {
-      width: 60%;
+      width: 70%;
       margin: 0 auto;
     }
     .bioButton {
@@ -213,7 +223,7 @@
   margin-top: 25px;
   min-height: calc(89% - 60px);
 
-  h4{
+  h4 {
     font-family: robotoSlab;
     font-size: 25px;
   }
@@ -227,7 +237,7 @@
     width: 250px;
     height: 250px;
     border-radius: 25px;
-    // border-radius: 50%;
+    object-fit: cover;
   }
   p {
     font-family: poppinsReg;
@@ -244,7 +254,6 @@
     justify-content: space-evenly;
     flex-direction: column;
     img {
-      
       margin: 20px;
     }
   }
@@ -252,12 +261,12 @@
 
 //Rabbit Bio MQ//
 @media (max-width: 1200px) {
-  .rabbitBio{
+  .rabbitBio {
     flex-direction: column;
-    .bio{
-        width: 80%;
+    .bio {
+      width: 80%;
     }
-    .images{
+    .images {
       flex-direction: row;
     }
   }
@@ -279,6 +288,7 @@
     }
   }
   .form {
+    // width: 50%;
     margin: 0 auto;
     border: solid 2px $siteDarkBlue;
     border-radius: 20px;
